nav bar to absolute positioning to fix dropdown menu overlap

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ code {
   height: 4px;
   background-color: white;
   transform: rotate(0deg);
-  transition: all 0.5s;
+  transition: 0.5s;
 }
 
 .hamburger-middle{
@@ -188,7 +188,7 @@ top position to -15 or more*/
 .menu {
   width: 100vw;
   position: absolute;
-  top: -250px;
+  top: -260px;
   z-index: -10;
   transition: all 0.5s;
 }
